--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -12,7 +12,7 @@ block content
     if step == 1
       form(method='post' action='/password_reset')
         div
-          p.reset-hint.text-center 请输入你注册的邮箱地址，我们将会发送一封邮件给你，里面包含密码重置链接，点击链接进入重置流程
+          p.reset-hint.text-center.small-font 请输入你注册的邮箱地址，我们将会发送一封邮件给你，里面包含密码重置链接，点击链接进入重置流程
           .form-group
             input(type='email' name='email' id='email' class='form-control' autofocus)
           .form-group
