--- a/assets/sass/partials/_base.scss
+++ b/assets/sass/partials/_base.scss
@@ -21,6 +21,7 @@ main {
   margin: auto;
 }
 
+.inline-block { display: inline-block; }
 .flex         { display: flex; }
 .relative     { position: relative; }
 .absolute     { position: absolute; }
@@ -73,4 +74,16 @@ ul.nav {
   padding: 0.5em 0;
   color: red;
   margin-bottom: 0.5em;
+}
+
+// button & input & select
+@mixin inline-box {
+  display: inline-block;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.9rem;
+  height: 2rem;
+  line-height: 22px;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 4px;
 }
