--- a/assets/sass/partials/_button.scss
+++ b/assets/sass/partials/_button.scss
@@ -1,16 +1,9 @@
 /* normal button look*/
 .btn {
-  display: inline-block;
-  padding: 0.25em 0.5em;
-  font-size: 0.875em;
-  line-height: 1.5;
+  @include inline-box;
+  border-color: #53868B;
   color: #eee;
-  text-align:center;
-  vertical-align: middle;
-  cursor: pointer;
   background-color: #53868B;
-  border: 1px solid #53868B;
-  border-radius: 3px;
   cursor:pointer;
 }
 
