--- a/assets/sass/partials/_form.scss
+++ b/assets/sass/partials/_form.scss
@@ -16,15 +16,10 @@ input[type='radio'] {
 }
 
 .form-control {
-  display: inline-block;
+  @include inline-box;
   width: 100%;
-  padding: 0.25em 0.5em;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border-color: #ccc;
   color: #333;
-  line-height: 1.5;
-  height: 2em;
-  font-size: 0.9em;
   outline:none;
   margin-top: 0.5em;
 }
