--- a/assets/sass/profile.scss
+++ b/assets/sass/profile.scss
@@ -18,7 +18,7 @@
     }
 
     a:hover:not(.active) {
-      background-color: #eee;
+      background-color: #ddd;
     }
   }
 
@@ -27,347 +27,333 @@
     padding: 15px 20px;
     border: 1px solid #ccc;
     border-left:none;
+  }
+}
 
-    /* 浏览与修改用户信息 */
-    .user-info {
-      .form-control,
-      .form-control-hint,
-      .rich-editor + div {
-        width:80%;
-        margin-right: 6px;
-      }
+/* 浏览与修改用户信息 */
+.user-info {
+  .form-control,
+  .form-control-hint,
+  .rich-editor + div {
+    width:85%;
+    margin-right: 0.5em;
+  }
 
-      button {
-        vertical-align:top;
-        margin:7px 6px 0 0;
-      }
+  button {
+    vertical-align:top;
+    margin:0.5em 0.5em 0 0;
+  }
+}
+
+/* 申请或创建的职位信息 */
+.new-job {
+  margin-bottom: 0.8em;
+}
+
+/* 职位列表 */
+.jobs-container {
+  .job-category {
+    margin-bottom: 1em;
+    border-bottom: 1px solid #ddd;
+
+    a {
+      display: inline-block;
+      margin-right: 1em;
+      padding-bottom: 0.5em;
+      text-decoration: none;
     }
 
-    /* 申请或创建的职位信息 */
-    .new-job {
-      margin-bottom: 0.8em;
-      font-weight: bold;
+    a.active {
+      border-bottom: 2px solid #a00;
+      color: #000;
+      cursor: default;
+    }
+  }
+
+  .job-item {
+    margin-bottom:20px;
+    padding:10px;
+    background-color:#eee;
+    border:1px solid #d2d2d2;
+  }
+}
+
+.job-item {
+  .job-title {
+    padding-bottom:6px;
+    border-bottom:1px solid #bbb;
+
+    a.title-link {
+      margin-right: 16px;
     }
 
-    /* 职位列表 */
-    .jobs-container .job-category {
-      margin-bottom: 1em;
-      border-bottom: 1px solid #ddd;
-
-      a {
-        display: inline-block;
-        margin-right: 1em;
-        padding-bottom: 0.5em;
-        text-decoration: none;
-      }
-
-      a.active {
-        border-bottom: 2px solid #a00;
-        color: #000;
-        cursor: default;
-      }
+    a.job-edit {
+      right: 75px;
     }
 
-    .jobs-container .job-item {
-      margin-bottom:20px;
-      padding:10px;
-      background-color:#eee;
-      border:1px solid #d2d2d2;
+    a.job-questions {
+      right: 0;
+    }
+  }
 
-      .job-info {
-        flex: 8;
-        padding-right:6px;
+  .job-basics {
+    margin-top: 6px;
+    padding-bottom: 6px;
 
-        .job-title {
-          margin:0;
-          padding-bottom:6px;
-          border-bottom:1px solid #bbb;
-          position: relative;
+    span {
+      padding:0 8px;
+      border-right:1px solid #bbb;
+      &:first-child {
+        padding-left:0;
+      }
+      &:last-child {
+        border-right:none;
+      }
+    }
+  }
 
-          a.title-link, a.appliers-link {
-            font-weight:bold;
-            color:blue;
-          }
+  .job-status {
+    padding-top: 6px;
+    border-top: 1px dashed #bbb;
 
-          a.title-link {
-            display: inline-block;
-            margin-right: 16px;
-          }
+    .apply-pending {
+      color: blue;
+    }
 
-          a.job-edit {
-            position: absolute;
-            right: 75px;
-          }
+    .apply-refused {
+      color: red;
+    }
 
-          a.job-questions {
-            position: absolute;
-            right: 0;
+    .apply-passed {
+      color: green;
+    }
+  }
+}
+
+/* 账号与密码 */
+.account {
+  padding:1em 0;
+
+  & > div:first-child {
+    margin-bottom:1em;
+  }
+
+  .header {
+    border-radius: 0.25em 0.25em 0 0;
+    background:#ccc;
+    border:1px solid #ccc;
+    padding:0.5em 1.2em;
+  }
+
+  .account-content {
+    border:1px solid #ccc;
+    border-top:none;
+    padding:0.5em 1.2em;
+  }
+
+  .overlay {
+    position:fixed;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-color:#000;
+    opacity:0.5;
+    z-index:100;
+  }
+
+  .cropDlg {
+    position:fixed;
+    width:500px;
+    top:100px;
+    border:6px solid rgba(0,0,0,0.7);
+    z-index:101;
+    padding:6px;
+    background:#fff;
+
+    .close {
+      float:right;
+    }
+
+    .middle {
+      margin:6px 0;
+      padding:6px 0;
+      border-top:2px solid #777;
+      border-bottom:2px solid #777;
+
+      /* disable image be selected*/
+      img {
+        -moz-user-select: -moz-none;
+        -o-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      .crop-container {
+        position:relative;
+        $edge_border_width: 2px;
+
+        .origin-img {
+          opacity: 0.5;
+          z-index:1000;
+        }
+
+        .cropArea {
+          position:absolute;
+          overflow:hidden;
+          z-index:1001;
+
+          .crop-img {
+            position:absolute;
           }
         }
 
-        .job-basics {
-          margin-top: 6px;
-          margin-bottom: 6px;
-          padding-bottom: 6px;
-          border-bottom:1px dashed #bbb;
-
-          span {
-            padding:0 8px;
-            border-right:1px solid #bbb;
-            &:first-child {
-              padding-left:0;
-            }
-            &:last-child {
-              border-right:none;
-            }
-          }
+        .crop-edge {
+          position:absolute;
         }
 
-        .job-status {
-          margin-top: 6px;
-          padding-top: 6px;
+        .crop-edge.sep-line {
+          background: #fff url('/images/crop_edge.gif') repeat scroll 0 0;
+          opacity: 0.5;
+        }
 
-          .apply-pending {
-            color: blue;
-          }
+        .move-area {
+          z-index:1002;
+          cursor:move;
+        }
 
-          .apply-refused {
-            color: red;
-          }
+        .corner {
+          border: 1px solid #eee;
+          background-color: #333;
+          opacity: 0.7;
+          position: absolute;
+          width: 8px;
+          height: 8px;
+        }
 
-          .apply-passed {
-            color: green;
-          }
+        .tl-corner {
+          cursor: nw-resize;
+          z-index:1007;
+          margin-left: -4px;
+          margin-top: -4px;
+        }
+        .tm-corner {
+          cursor: n-resize;
+          z-index:1008;
+          margin-top: -4px;
+        }
+        .tr-corner {
+          cursor: ne-resize;
+          z-index:1009;
+          margin-top: -4px;
+          margin-left: 4px;
+        }
+        .lm-corner {
+          cursor: w-resize;
+          z-index:1010;
+          margin-left: -4px;
+        }
+        .rm-corner {
+          cursor: e-resize;
+          z-index:1011;
+          margin-left: 4px;
+        }
+        .bl-corner {
+          cursor: sw-resize;
+          z-index:1012;
+          margin-left: -4px;
+          margin-top: 4px;
+        }
+        .bm-corner {
+          cursor: s-resize;
+          z-index:1013;
+          margin-top: 4px;
+        }
+        .br-corner {
+          cursor: se-resize;
+          z-index:1014;
+          margin-left: 4px;
+          margin-top: 4px;
+        }
+
+        .left-edge {
+          z-index:1003;
+          width:$edge_border_width;
+          cursor:w-resize;
+        }
+        .top-edge {
+          z-index:1004;
+          height:$edge_border_width;
+          cursor:n-resize;
+        }
+        .right-edge {
+          z-index:1005;
+          width:$edge_border_width;
+          cursor:e-resize;
+        }
+        .bottom-edge {
+          z-index:1006;
+          height:$edge_border_width;
+          cursor:s-resize;
         }
       }
     }
 
-    /* 账号与密码 */
-    .account {
-      padding:1em 0;
+    .foot {
+      text-align:right;
+    }
+  }
 
-      & > div:first-child {
-        margin-bottom:1em;
-      }
+  .avatar {
+    margin-bottom: 1em;
 
-      .header {
-        border-radius: 0.25em 0.25em 0 0;
-        background:#ccc;
-        border:1px solid #ccc;
-        padding:0.5em 1.2em;
-      }
+    img.current-avatar {
+      border-radius: 0.25em;
+    }
 
-      .account-content {
-        border:1px solid #ccc;
-        border-top:none;
-        padding:0.5em 1.2em;
-      }
+    .upload {
+      display:inline-block;
+      margin-left:1em;
+      vertical-align:top;
+      overflow:hidden;
+      position:relative;
 
-      .overlay {
-        position:fixed;
+      input {
+        position:absolute;
         left:0;
         top:0;
-        width:100%;
-        height:100%;
-        background-color:#000;
-        opacity:0.5;
-        z-index:100;
-      }
-
-      .cropDlg {
-        position:fixed;
-        width:500px;
-        top:100px;
-        border:6px solid rgba(0,0,0,0.7);
-        z-index:101;
-        padding:6px;
-        background:#fff;
-
-        .close {
-          float:right;
-        }
-
-        .middle {
-          margin:6px 0;
-          padding:6px 0;
-          border-top:2px solid #777;
-          border-bottom:2px solid #777;
-
-          /* disable image be selected*/
-          img {
-            -moz-user-select: -moz-none;
-            -o-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-          }
-
-          .crop-container {
-            position:relative;
-            $edge_border_width: 2px;
-
-            .origin-img {
-              opacity: 0.5;
-              z-index:1000;
-            }
-
-            .cropArea {
-              position:absolute;
-              overflow:hidden;
-              z-index:1001;
-
-              .crop-img {
-                position:absolute;
-              }
-            }
-
-            .crop-edge {
-              position:absolute;
-            }
-
-            .crop-edge.sep-line {
-              background: #fff url('/images/crop_edge.gif') repeat scroll 0 0;
-              opacity: 0.5;
-            }
-
-            .move-area {
-              z-index:1002;
-              cursor:move;
-            }
-
-            .corner {
-              border: 1px solid #eee;
-              background-color: #333;
-              opacity: 0.7;
-              position: absolute;
-              width: 8px;
-              height: 8px;
-            }
-
-            .tl-corner {
-              cursor: nw-resize;
-              z-index:1007;
-              margin-left: -4px;
-              margin-top: -4px;
-            }
-            .tm-corner {
-              cursor: n-resize;
-              z-index:1008;
-              margin-top: -4px;
-            }
-            .tr-corner {
-              cursor: ne-resize;
-              z-index:1009;
-              margin-top: -4px;
-              margin-left: 4px;
-            }
-            .lm-corner {
-              cursor: w-resize;
-              z-index:1010;
-              margin-left: -4px;
-            }
-            .rm-corner {
-              cursor: e-resize;
-              z-index:1011;
-              margin-left: 4px;
-            }
-            .bl-corner {
-              cursor: sw-resize;
-              z-index:1012;
-              margin-left: -4px;
-              margin-top: 4px;
-            }
-            .bm-corner {
-              cursor: s-resize;
-              z-index:1013;
-              margin-top: 4px;
-            }
-            .br-corner {
-              cursor: se-resize;
-              z-index:1014;
-              margin-left: 4px;
-              margin-top: 4px;
-            }
-
-            .left-edge {
-              z-index:1003;
-              width:$edge_border_width;
-              cursor:w-resize;
-            }
-            .top-edge {
-              z-index:1004;
-              height:$edge_border_width;
-              cursor:n-resize;
-            }
-            .right-edge {
-              z-index:1005;
-              width:$edge_border_width;
-              cursor:e-resize;
-            }
-            .bottom-edge {
-              z-index:1006;
-              height:$edge_border_width;
-              cursor:s-resize;
-            }
-          }
-        }
-
-        .foot {
-          text-align:right;
-        }
-      }
-
-      .avatar {
-        margin-bottom: 1em;
-
-        img.current-avatar {
-          border-radius: 0.25em;
-        }
-
-        .upload {
-          display:inline-block;
-          margin-left:1em;
-          vertical-align:top;
-          overflow:hidden;
-          position:relative;
-
-          input {
-            position:absolute;
-            left:0;
-            top:0;
-            opacity:0.001;
-            cursor:pointer;
-          }
-        }
+        opacity:0.001;
+        cursor:pointer;
       }
     }
+  }
+}
 
-    /* 消息中心 */
-    .messages {
-      border: 1px solid #aaa;
+/* 消息中心 */
+.messages {
+  border: 1px solid #aaa;
 
-      .head, .message {
-        padding: 0.5em 1em;
+  .head, .message {
+    padding: 0.5em 1em;
 
-        &:hover {
-          background-color: #ddd;
-        }
-
-        span:first-child {
-          flex: 5;
-        }
-
-        span:last-child {
-          flex: 1;
-          text-align: right;
-        }
-      }
-
-      .message .title a.read {
-        cursor: default;
-        color: #777;
-        text-decoration:none;
-      }
+    &:hover {
+      background-color: #ddd;
     }
+
+    span:first-child {
+      flex: 5;
+    }
+
+    span:last-child {
+      flex: 1;
+      text-align: right;
+    }
+  }
+
+  .message .title a.read {
+    cursor: default;
+    color: #777;
+    text-decoration:none;
   }
 }
