--- a/views/profile/_student_jobs.pug
+++ b/views/profile/_student_jobs.pug
@@ -14,22 +14,21 @@
   else
     each appliedJob in appliedJobs
       - var job = appliedJob._job
-      .job-item.flex(data-job-id=job.id)
-        .job-info
-          p.job-title
-            a.title-link(href='/job/' + job.id)= job.title
-          p.job-basics.small-font
-            span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
-            span 申请日期：<strong>#{appliedJob.createdAt.toLocaleDateString()}</strong>
-            span 公司：    <strong>#{job._creator.name}</strong>
-            span <strong>#{job.address}</strong>
-            span <strong>#{job.displaySalary}</strong>
-            span 申请人数：<strong>#{job._appliersSize}</strong>
-          .job-status.small-font
-            case appliedJob.status
-              when 0
-                .apply-pending 您的申请正在审核中，请耐心等待
-              when 1
-                .apply-refused= appliedJob.message
-              when 2
-                .apply-passed= appliedJob.message
+      .job-item(data-job-id=job.id)
+        .job-title
+          a.title-link(href='/job/' + job.id)= job.title
+        .job-basics.small-font
+          span 发布日期：<strong>#{job.createdAt.toLocaleDateString()}</strong>
+          span 申请日期：<strong>#{appliedJob.createdAt.toLocaleDateString()}</strong>
+          span 公司：    <strong>#{job._creator.name}</strong>
+          span <strong>#{job.address}</strong>
+          span <strong>#{job.displaySalary}</strong>
+          span 申请人数：<strong>#{job._appliersSize}</strong>
+        .job-status.small-font
+          case appliedJob.status
+            when 0
+              .apply-pending 您的申请正在审核中，请耐心等待
+            when 1
+              .apply-refused= appliedJob.message
+            when 2
+              .apply-passed= appliedJob.message
