--- a/views/jobs/new.pug
+++ b/views/jobs/new.pug
@@ -6,6 +6,7 @@ block js
   script(src='/js/job.js')
 block content
   form(method='post', action='/jobs', class='new-job hcenter')
+    .header.text-center.text-bold 创建职位
     .form-group
       label(for='title' class='label label-input') 职位名称：
       input(type='text', name='title', id='title', class='form-control' autofocus, required)
@@ -39,5 +40,5 @@ block content
     .form-group
       label(for='notes' class='label label-input') 备注：
       input(type='text', name='notes', id='notes', class='form-control')
-    .form-group
+    .form-group.text-center
       input(type='submit', value='发布职位', class='btn btn-primary')
