--- a/views/user/_student_show.pug
+++ b/views/user/_student_show.pug
@@ -1,13 +1,13 @@
-.basic-info
+.basic-info.small-font
   span
-    img(src=user.avatarUrl() alt='头像' width='36px' height='36px')
+    img(src=user.avatarUrl() alt='头像' width='24px' height='24px')
   span= user.name
   span= user.university
   span= user.major
   span= user.entryDate
 .career-plan
   .head.text-bold 职业规划：
-  .detail!= user.careerPlan ? user.careerPlan : '暂无'
+  .detail.small-font!= user.careerPlan ? user.careerPlan : '暂无'
 .zuopin
   .head.text-bold 课外作品：
-  .detail!= user.zuopin ? user.zuopin : '暂无'
+  .detail.small-font!= user.zuopin ? user.zuopin : '暂无'
