--- a/assets/sass/partials/_base.scss
+++ b/assets/sass/partials/_base.scss
@@ -21,6 +21,8 @@ main {
   margin: auto;
 }
 
+p { line-height: 1.5; }
+
 .inline-block { display: inline-block; }
 .flex         { display: flex; }
 .relative     { position: relative; }
