--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,7 +4,7 @@ html(lang='zh')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title= title
-    link(href="/css/font-awesome.css", rel="stylesheet")
+    link(href="/css/font_awesome.css", rel="stylesheet")
     block css
   body.flex
     include ./_head.pug
