--- a/views/user/passwordReset.pug
+++ b/views/user/passwordReset.pug
@@ -1,6 +1,6 @@
 extends ../layouts/main
-block css
-  link(href="/css/password_reset.css", rel="stylesheet")
+append css
+  link(href=assetHashPath("css/password_reset.css"), rel="stylesheet")
 block content
   .password-reset.hcenter.text-center
     if step < 4
