--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -4,13 +4,13 @@ html(lang='zh')
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title= title
-    link(href="/css/font_awesome.css", rel="stylesheet")
     block css
+      link(href=assetHashPath("css/font_awesome.css"), rel="stylesheet")
   body.flex
     include ./_head.pug
     main
       .content
         block content
     include ./_foot.pug
-    script(src='/js/vendor.js')
     block js
+      script(src=assetHashPath('js/vendor.js'))
