--- a/views/profile/index.pug
+++ b/views/profile/index.pug
@@ -1,9 +1,9 @@
 extends ../layouts/main
-block js
+append js
   script(src='/ckeditor/ckeditor.js')
-  script(src='/js/profile.js')
-block css
-  link(href="/css/profile.css", rel="stylesheet")
+  script(src=assetHashPath('js/profile.js'))
+append css
+  link(href=assetHashPath("css/profile.css"), rel="stylesheet")
 block content
   .flex.profile-container
     ul.nav.left-nav.small-font.text-center
