--- a/views/questions/edit.pug
+++ b/views/questions/edit.pug
@@ -1,18 +1,15 @@
-extends ../layouts/main
-block js
+extends _layout.pug
+append js
   script(src='/ckeditor/ckeditor.js')
-  script(src='/js/questions.js')
-block css
-  link(href="/css/questions.css", rel="stylesheet")
 block content
   .question-new
-    .questions-new-head.text-bold
+    .questions-new-head
       | 您正在为职位
       a.job-title(href='/job/' + job.id)= job.title
       | 修改一道试题：
-    form.questions-edit-form(method='post' action='/job/' + job.id + '/question/' + question.id + '/update')
+    form.questions-edit-form.small-font(method='post' action='/job/' + job.id + '/question/' + question.id + '/update')
       .form-group
-        label(class='label label-input text-bold') 难度：
+        label(class='label label-input') 难度：
         .levels
           each l in [0,1,2,3,4,5]
             .level
@@ -20,7 +17,7 @@ block content
               label(for='level' + l class='label')
                 | #{gModels.Question.LEVEL_DESCS[l]}
       .form-group
-        label(for='content' class='label label-input text-bold') 题目内容：
+        label(for='content' class='label label-input') 题目内容：
         textarea(name='content', id='content' class='form-control rich-editor', required)= question.content
       .form-group
         input(type='submit', value='保 存' class='btn btn-primary')
