--- a/views/questions/index.pug
+++ b/views/questions/index.pug
@@ -1,10 +1,6 @@
-extends ../layouts/main
-block js
-  script(src='/js/questions.js')
-block css
-  link(href="/css/questions.css", rel="stylesheet")
+extends _layout.pug
 block content
-  .questions-head.text-bold.relative
+  .questions-head.relative
     a.job-title(href='/job/' + job.id)= job.title
     | 的题目列表
     a.btn.btn-primary.new-question.absolute(href='/job/' + job.id + '/questions/new') 新建题目
@@ -13,9 +9,9 @@ block content
       .text-center.no-questions 您还没有为本职位创建任何题目，预先给出试题有助于深入及提前考察面试者！
     else
       each question in questions
-        .question
+        .question.small-font
           .question-content!= question.content
-          .question-level.small-font.relative
+          .question-level.relative
             span 难度：
               strong= question.levelDesc()
             a.absolute.answers(href='/question/' + question.id + '/answers') 查看所有解答
