--- a/views/user/loginView.pug
+++ b/views/user/loginView.pug
@@ -1,6 +1,6 @@
 extends _layout.pug
 block content
-  div.login-box.hcenter
+  .login-box.hcenter
     form(method='post', action='/login', class='login')
       input(type='hidden' name='return_to' value=return_to)
       .form-group
