--- a/views/answers/show.pug
+++ b/views/answers/show.pug
@@ -12,14 +12,14 @@ block content
       .body.small-font!= answer.content
       .opts
         if req.currentUser.type == 0
-          a.edit-answer.btn(href='/question/' + question.id + '/answer/' + answer.id + '/edit') 修 改
-          button.btn.btn-warning.del-answer 删 除
+          a.edit-answer.btn-normal(href='/question/' + question.id + '/answer/' + answer.id + '/edit') 修 改
+          button.btn-warning.del-answer(data-link='/question/' + question.id + '/answer/' + answer.id + '/remove' data-job-id=job.id) 删 除
         else
           if answer.isScored
             strong.text-bold.small-font 你对此解答的当前评分：#{answer.score} 分
-            button.btn.re-score 重新评分
+            button.btn-normal.re-score 重新评分
           else
-            button.btn.btn-primary.to-score 为此解答评分
+            button.btn-primary.to-score 为此解答评分
       .score-comment(style={display: 'none'})
         form.set-score(method='post' action='/question/' + question.id + '/answer/' + answer.id + '/update')
           .form-group
@@ -29,4 +29,4 @@ block content
             label.label.label-input(for='comment') 评语：
             textarea(name='comment', id='comment', class='form-control')= answer.comment
           .form-group
-            input.btn.btn-primary(type='submit' value='提 交')
+            input.btn-primary(type='submit' value='提 交')
