--- a/views/jobs/show.pug
+++ b/views/jobs/show.pug
@@ -29,6 +29,6 @@ block content
       include _questions.pug
     section.job-apply.text-center
         if applied
-          button(class='btn btn-disabled' disabled) 已 申 请
+          span(class='applied larger-font') 已 申 请
         else if !req.currentUser || req.currentUser.type == 0
           button(class='btn btn-primary' data-job-id=job.id) 申 请
