--- a/views/profile/_account.pug
+++ b/views/profile/_account.pug
@@ -4,7 +4,7 @@
     .avatar
       .form-group 头像：
       img(class='current-avatar' width=70 height=70 src=user.avatarUrl() alt=user.name)
-      span(class='upload btn relative inline-block')
+      span(class='upload btn-normal relative inline-block')
         label(for='avatar') 上传头像
         input.absolute(type='file' id='avatar' name='avatar')
     .overlay(style={display: 'none'})
