--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -7,9 +7,6 @@ header {
     align-items:center;
 
     .logo {
-      font-size:1.2em;
-      line-height:1.2;
-      font-weight:bold;
       margin-right:auto;
       text-decoration: none;
     }
@@ -21,6 +18,10 @@ header {
     margin-right: 18px;
     color: #777;
 
+    .fa {
+      font-size: 22px;
+    }
+
     &.has-msg {
       color: #a00;
     }
@@ -29,7 +30,7 @@ header {
       display: none;
       position: absolute;
       top: 140%;
-      left: -3em;
+      left: -2.7em;
       padding: 0.5em;
       width: 7em;
       color: #fff;
@@ -60,6 +61,8 @@ header {
 
       img {
         margin-right: 6px;
+        width: 22px;
+        height: 22px;
       }
     }
 
@@ -67,7 +70,7 @@ header {
       position: absolute;
       display: none;
       top: 120%;
-      right: -40%;
+      right: -53%;
       width: 100px;
       background-color: #fff;
       border: 1px solid #aaa;
