--- a/views/home/_welcome_signup.pug
+++ b/views/home/_welcome_signup.pug
@@ -22,4 +22,4 @@
           input(type='radio', id='user-type-company', name='userType', value=1)
           | 公司
       div
-        input(type='submit', value='加入学做网' class='btn-primary')
+        input(type='submit', value='加入学做网' class='btn-primary text-bold')
