--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -5,5 +5,4 @@ append js
   script(src=assetHashPath('js/home.js'))
 block content
   include _welcome_signup.pug
-  include _welcome_student.pug
-  include _welcome_company.pug
+  include _welcome_other.pug
