--- a/assets/sass/partials/_footer.scss
+++ b/assets/sass/partials/_footer.scss
@@ -1,7 +1,7 @@
 /* footer */
 footer {
   font-size: 0.8rem;
-  border-top: 1px solid #e8e8e8;
+  border-top: 1px solid #ccc;
   color: #999;
   text-align: center;
   width: 100%;
