--- a/assets/sass/job.scss
+++ b/assets/sass/job.scss
@@ -138,6 +138,7 @@ form.jobs-search > div.flex {
   padding-bottom:6px;
   margin-bottom: 6px;
   border-bottom:1px solid #bbb;
+  align-items: center;
 
   a {
     margin-right:auto;
